fix button and some alignment and clean introduction

--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,11 @@ i {
   font-weight: lighter;
 }
 
+.case-study-1 > .container {
+  text-align: left;
+  padding-left: 0rem;
+}
+
 .case-study-2 {
   text-align: center;
 }
@@ -312,20 +317,12 @@ img[src="images/moodboard-portfolio.png"] {
   background-color: white;
 }
 
-.roles {
-  background-image: url("../svg/blue1.svg");
-  background-position: bottom;
+.roles, .deliverables {
   padding-top: 0rem;
-}
-
-.deliverables {
-  background-image: url("../svg/blue2.svg");
-  padding-top: 0rem;
+  border-right: 1px black solid;
 }
 
 .tools {
-  background-image: url("../svg/blue1.svg");
-  background-position: left;
   padding-top: 0rem;
 }
 
@@ -411,6 +408,16 @@ img[src="images/wyatt.png"], img[src="images/elaine.png"] {
 
 .user-personas {
   text-align: center;
+}
+
+.wyatt > p:nth-of-type(2n) {
+  display: block;
+  text-align: left;
+}
+
+.elaine > p:nth-of-type(2n) {
+  display: block;
+  text-align: left;
 }
 
 .user-personas > h2 {
